// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/TeamsDetail renders without crashing: close button 1`] = `
Object {
  "block": false,
  "className": "float-right close-btn",
  "ghost": false,
  "htmlType": "button",
  "icon": <ForwardRef(CloseOutlined) />,
  "loading": false,
  "onClick": [Function],
  "shape": "circle",
  "type": "text",
}
`;

exports[`components/TeamsDetail renders without crashing: identifier 1`] = `
<div
  className="mb-4 small"
>
  <p
    className="mb-0 font-weight-bold"
  >
    Identifier
  </p>
  <p
    className="mb-0"
  >
    fcc19470-d599-11e9-bb65-2a2ae2dbcce4
  </p>
</div>
`;

exports[`components/TeamsDetail renders without crashing: status 1`] = `
<div
  className="mb-4 small"
>
  <p
    className="mb-0 font-weight-bold"
  >
    Status
  </p>
  <p
    className="mb-0"
  >
    true
  </p>
</div>
`;

exports[`components/TeamsDetail renders without crashing: team members 1`] = `
<div
  className="mb-4 small"
>
  <p
    className="mb-0 font-weight-bold"
  >
    Team members
  </p>
  <p
    className="mb-0"
    key="718e2b7d-22d7-4c23-aaa7-62cca4b9e318"
  >
    prac two
  </p>
</div>
`;

exports[`components/TeamsDetail renders without crashing: team name 1`] = `
<div
  className="mb-4 small mt-4"
>
  <p
    className="mb-0 font-weight-bold"
  >
    Team name
  </p>
  <p
    className="mb-0"
  >
    The Luang
  </p>
</div>
`;
